--- a/tools/driver/CMakeLists.txt
+++ b/tools/driver/CMakeLists.txt
@@ -59,11 +59,7 @@ endif()
 add_dependencies(clang clang-headers)
 
 if(NOT CLANG_LINKS_TO_CREATE)
-  set(CLANG_LINKS_TO_CREATE clang++ clang-cl clang-cpp hanafuda hanafuda++)
-
-  if (WIN32)
-    list(APPEND CLANG_LINKS_TO_CREATE ../msbuild-bin/cl)
-  endif()
+  set(CLANG_LINKS_TO_CREATE hanafuda hanafuda++)
 endif()
 
 foreach(link ${CLANG_LINKS_TO_CREATE})
